--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
-    <string name="app_name">miniprojek2</string>
+    <string name="app_name">Data Atlet Taekwondo</string>
+    <string name="list_kosong">Belum ada data</string>
+    <string name="x_diklik">%1$s diklik!</string>
+    <string name="tambah_Atlet">Tambah Data Atlet</string>
+    <string name="nama_atlet">Nama Atlet</string>
+    <string name="Sabuk">Sabuk</string>
+    <string name="kembali">Kembali</string>
+    <string name="simpan">Simpan</string>
+    <string name="edit_atlet">Ubah Data Atlet </string>
+    <string name="invalid">nama, sabuk, dan fakultas tidak boleh kosong </string>
+    <string name="lainnya">Opsi lainnya</string>
+    <string name="hapus">Hapus Atlet Taekwondo</string>
+    <string name="pesan_hapus"> hapus catatan ini? </string>
+    <string name="tombol_hapus">Hapus</string>
+    <string name="tombol_batal">Batal</string>
+    <string name="list">Tampilan list</string>
+    <string name="grid">Tampilan grid</string>
 </resources>
