--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="invalid">nama, sabuk, dan fakultas tidak boleh kosong </string>
     <string name="lainnya">Opsi lainnya</string>
     <string name="hapus">Hapus Atlet Taekwondo</string>
-    <string name="pesan_hapus"> hapus catatan ini? </string>
+    <string name="pesan_hapus"> Hapus catatan ini? </string>
     <string name="tombol_hapus">Hapus</string>
     <string name="tombol_batal">Batal</string>
     <string name="list">Tampilan list</string>
